--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
     "devextreme": "24.2.11",
     "devextreme-vue": "24.2.11",
+    "tailwindcss": "^4.1.17",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
   },
