--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "devextreme-vue": "24.2.11",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.22",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "whatwg-fetch": "^3.6.20"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
